--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -39,8 +39,7 @@
           <tr>
             <td>
               <center>
-                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#<%= dc.calldate %>-hourly">Hourly</button>
-              </center>
+              <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#<%= dc.calldate %>-hourly">Hourly</button>
               <div class="modal fade" id="<%= dc.calldate %>-hourly" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -62,7 +61,7 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <% hourly_data = get_hourly_count_by_date(@hourly_counters, dc.calldate) %>
+                          <% hourly_data = get_hourly_count_by_date(dc.calldate) %>
                           <% hourly_data.each do |hc| %>
                           <tr>
                             <td><%= hc.hour %></td>
@@ -83,6 +82,52 @@
                   </div> <!-- /.modal-content -->
                 </div> <!-- /.modal-dialog -->
               </div> <!-- /.modal fade -->
+              <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#<%= dc.calldate %>-filename">Filename</button>
+              <div class="modal fade" id="<%= dc.calldate %>-filename" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel"><%= display_date(dc.calldate) %></h4>
+                    </div>
+                    <div class="modal-body">
+                      <table class="table table-striped table-rounded table-bordered">
+                        <thead>
+                          <tr>
+                            <th>Hour</th>
+                            <th>Filename</th>
+                            <th>Input</th>
+                            <th>Output</th>
+                            <th>Malformed</th>
+                            <th>Missing</th>
+                            <th>ZeroValue</th>
+                            <th>MinTooLow</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <% file_data = get_hourly_count_by_file(dc.calldate) %>
+                          <% file_data.each do |fc| %>
+                          <tr>
+                            <td><%= fc.hour %></td>
+                            <td><%= fc.file %></td>
+                            <td><%= number_with_delimiter(fc.sum_records_in, :delimiter => ',') %></td>
+                            <td><%= number_with_delimiter(fc.sum_records_out, :delimiter => ',') %></td>
+                            <td><%= number_with_delimiter(fc.sum_malformed_data, :delimiter => ',') %></td>
+                            <td><%= number_with_delimiter(fc.sum_missing_data, :delimiter => ',') %></td>
+                            <td><%= number_with_delimiter(fc.sum_zero_value, :delimiter => ',') %></td>
+                            <td><%= number_with_delimiter(fc.sum_min_too_low, :delimiter => ',') %></td>
+                          </tr>
+                          <% end %>
+                        </tbody>
+                      </table>
+                    </div> <!-- / .modal-body -->
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                  </div> <!-- /.modal-content -->
+                </div> <!-- /.modal-dialog -->
+              </div> <!-- /.modal fade -->
+              </center>
             </td>
             <td><%= display_date(dc.calldate) %></td>
             <td><%= number_with_delimiter(dc.sum_records_in, :delimiter => ',') %></td>
