--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,16 @@
  *= require bootstrap-datepicker
  */
 @import "bootstrap";
+
+.modal-body {
+  position: relative;
+  overflow-y: auto;
+  max-height: 400px;
+  padding: 20px;
+}
+
+.modal-dialog {
+  width: 900px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
