--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,6 +9,9 @@
         <%= text_field_tag :start_date %>
         <%= submit_tag "Search", :class => "btn btn-primary btn-sm" %>
       <% end %><br />
+      <% if flash[:error] -%>
+        <p class='error'><%=h flash[:error] %></p>
+      <% end -%>
 
       <table class="table table-striped table-rounded table-bordered">
         <thead>
