--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,9 +9,14 @@
         <%= text_field_tag :start_date, nil, 'data-date-format' => 'yyyy/mm/dd' %>
         <%= submit_tag "Search", :class => "btn btn-primary btn-sm" %>
       <% end %><br />
-      <% if flash[:notice] -%>
-        <p class='notice'><%=h flash[:notice] %></p>
-      <% end -%>
+      <div>
+        <% flash.each do |key, value| %>
+          <div class="alert alert-dismissable <%= flash_class(key) %> fade in">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <%= value %>
+          </div>
+        <% end %>
+      </div>
 
       <table class="table table-striped table-rounded table-bordered">
         <thead>
