--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,14 +21,14 @@
       <table class="table table-striped table-rounded table-bordered">
         <thead>
           <tr>
-            <th>
-              <center><%= link_to "<<", :start_date => (@date.beginning_of_week-1) %></center>
-            </th>
-            <th colspan="6">
-              <center>Week # <%= @current_week %></center>
-            </th>
-            <th>
-              <center><%= link_to ">>", :start_date => (@date.end_of_week+1) %></center>
+            <th colspan="8">
+              <center>
+                <%= link_to "<<", :start_date => (@date.beginning_of_week-1) %>
+                &nbsp &nbsp &nbsp
+                Week # <%= @current_week %>
+                &nbsp &nbsp &nbsp
+                <%= link_to ">>", :start_date => (@date.end_of_week+1) %>
+              </center>
             </th>
           </tr>
           <tr>
@@ -42,6 +42,18 @@
             <th>MinTooLow</th>
           </tr>
         </thead>
+        <tfoot>
+          <tr>
+            <td colspan="8">
+              <div style="float:left">
+                <%= link_to "Previous Week", :start_date => (@date.beginning_of_week-1) %>
+              </div>
+              <div style="float:right">
+                <%= link_to "Next Week", :start_date => (@date.end_of_week+1) %>
+              </div>
+            </td>
+          </tr>
+        </tfoot>
         <tbody>
           <% @daily_counters.each do |dc| %>
           <tr>
