--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,56 +3,26 @@
     <div class="col-md-1"></div>
     <div class="col-md-10">
       <h2>Mediation Counters</h2>
-      <br />
-      <%= form_tag(dashboard_index_path, method: "get") do %>
-        <%= label_tag("Date:") %>
-        <%= text_field_tag :start_date, nil, 'data-date-format' => 'yyyy/mm/dd' %>
-        <%= submit_tag "Search", :class => "btn btn-primary btn-sm" %>
-      <% end %><br />
-      <div>
-        <% flash.each do |key, value| %>
-          <div class="alert alert-dismissable <%= flash_class(key) %> fade in">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            <%= value %>
-          </div>
-        <% end %>
-      </div>
+      <br /><%= render "search" %><br /><br />
+      <div><%= render "flash_message" %></div>
 
       <table class="table table-striped table-rounded table-bordered">
         <thead>
           <tr>
             <th colspan="8">
               <center>
-                <%= link_to "<<", :start_date => (@date.beginning_of_week-1) %>
-                &nbsp &nbsp &nbsp
-                Week # <%= @current_week %>
-                &nbsp &nbsp &nbsp
-                <%= link_to ">>", :start_date => (@date.end_of_week+1) %>
+                <%= render "week_number" %>
               </center>
             </th>
           </tr>
           <tr>
             <th></th>
             <th>Day</th>
-            <th>Input</th>
-            <th>Output</th>
-            <th>Malformed</th>
-            <th>Missing</th>
-            <th>ZeroValue</th>
-            <th>MinTooLow</th>
+            <%= render "header" %>
           </tr>
         </thead>
         <tfoot>
-          <tr>
-            <td colspan="8">
-              <div style="float:left">
-                <%= link_to "Previous Week", :start_date => (@date.beginning_of_week-1) %>
-              </div>
-              <div style="float:right">
-                <%= link_to "Next Week", :start_date => (@date.end_of_week+1) %>
-              </div>
-            </td>
-          </tr>
+          <%= render "footer" %>
         </tfoot>
         <tbody>
           <% @daily_counters.each do |dc| %>
@@ -72,12 +42,7 @@
                         <thead>
                           <tr>
                             <th>Hour</th>
-                            <th>Input</th>
-                            <th>Output</th>
-                            <th>Malformed</th>
-                            <th>Missing</th>
-                            <th>ZeroValue</th>
-                            <th>MinTooLow</th>
+                            <%= render "header" %>
                           </tr>
                         </thead>
                         <tbody>
@@ -116,12 +81,7 @@
                           <tr>
                             <th>Hour</th>
                             <th>Filename</th>
-                            <th>Input</th>
-                            <th>Output</th>
-                            <th>Malformed</th>
-                            <th>Missing</th>
-                            <th>ZeroValue</th>
-                            <th>MinTooLow</th>
+                            <%= render "header" %>
                           </tr>
                         </thead>
                         <tbody>
@@ -158,8 +118,6 @@
             <td><%= number_with_delimiter(dc.sum_min_too_low, :delimiter => ",") %></td>
             <!-- create the hourly modal -->
           </tr>
-          <!-- /hourly modal -->
-          <!-- TODO file level modal -->
           <% end %> <!-- daily_counters.each -->
         </tbody>
       </table>
