--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  *= require_self
  *= require_tree .
  *= require bootstrap-datepicker
+ *= require jquery.ui.all
  */
 @import "bootstrap";
 @import "font-awesome";
