--- a/app/assets/stylesheets/search_suggestion.css.scss
+++ b/app/assets/stylesheets/search_suggestion.css.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the Dashboard controller here.
+// Place all the styles related to the search_suggestion controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.span1 {
-  font-size: 85%
-}
