--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-10">
-      <h2>Mediation Counters</h2>
-      <br><br><%= render "search" %><br><br><br>
+    <h2>Mediation Counters</h2>
+    <br><br>
+    <div class="col-md-3">
+      <%= render "search" %>
+    </div>
+    <div class="col-md-8">
       <%= render "flash_message" %>
       <%= render "content" %>
     </div>
