--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@
  *= require_self
  *= require_tree .
  *= require bootstrap-datepicker
- *= require jquery.ui.all
+ *= require jquery.ui.autocomplete
  */
 @import "bootstrap";
 @import "font-awesome";
