--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,8 @@
  *
  *= require_self
  *= require_tree .
- *= require bootstrap-datepicker
  *= require jquery.ui.autocomplete
+ *= require jquery.ui.datepicker
  */
 @import "bootstrap";
 @import "font-awesome";
