--- a/app/views/dashboard/_search.html.erb
+++ b/app/views/dashboard/_search.html.erb
@@ -5,7 +5,7 @@
   <br><br>
   <%= label_tag("Filename:") %>
   <br>
-  <%= text_field_tag :search_filename, nil, placeholder: 'Type filename' %>
+  <%= text_field_tag :search_filename %>
   <br><br>
   <%= submit_tag "Search", :class => "btn btn-primary btn-sm" %>
 <% end %>
