--- a/app/views/dashboard/_search.html.erb
+++ b/app/views/dashboard/_search.html.erb
@@ -1,11 +1,11 @@
 <%= form_tag(dashboard_index_path, method: "get") do %>
   <%= label_tag("Date: ") %>
   <br>
-  <%= text_field_tag :start_date, nil, placeholder: 'Require' %>
+  <%= text_field_tag :start_date %>
   <br><br>
   <%= label_tag("Filename:") %>
   <br>
-  <%= text_field_tag :search_filename %>
+  <%= text_field_tag :search_filename, nil, placeholder:'Type filename' %>
   <br><br>
   <%= submit_tag "Search", :class => "btn btn-primary btn-sm" %>
 <% end %>
